--- a/common/test/assets/javascripts/runner.html
+++ b/common/test/assets/javascripts/runner.html
@@ -589,8 +589,8 @@
 <style data-cache-name="font2" data-cache-file-woff="fonts/font2.woff.12345.js" data-cache-file-ttf="fonts/font2.ttf.12345.js"></style>
 
 <!-- Australia.spec -->
-    <a id="au-link" class="au-test nav__link edition" data-edition="au" data-link-name="switch to au edition" href="#au-link">AUS edition</a>
-    <a id="edition-switch" class="au-test nav__link edition" data-edition="us" data-link-name="switch to us edition" href="#edition-switch">US edition</a>
+    <a class="au-test nav__link edition edition-au" data-link-name="switch to au edition" href="#au-link">AUS edition</a>
+    <a class="au-test nav__link edition" data-link-name="switch to us edition" href="#edition-switch">US edition</a>
 
 </body>
 </html>
