--- a/common/test/assets/javascripts/runner.html
+++ b/common/test/assets/javascripts/runner.html
@@ -168,6 +168,7 @@
         <li><a href="#Storage">Storage</a></li>
         <li><a href="#Swipe">Swipe</a></li>
         <li><a href="#UserPrefs">UserPrefs</a></li>
+        <li><a href="#Pad">Pad</a></li>
     </ul>
 
     <div id="test-cases">
