--- a/common/test/assets/javascripts/runner.html
+++ b/common/test/assets/javascripts/runner.html
@@ -169,6 +169,7 @@
         <li><a href="#Swipe">Swipe</a></li>
         <li><a href="#UserPrefs">UserPrefs</a></li>
         <li><a href="#Pad">Pad</a></li>
+        <li><a href="#Url">Url</a></li>
     </ul>
 
     <div id="test-cases">
