--- a/common/test/assets/javascripts/runner.html
+++ b/common/test/assets/javascripts/runner.html
@@ -170,6 +170,7 @@
         <li><a href="#UserPrefs">UserPrefs</a></li>
         <li><a href="#Pad">Pad</a></li>
         <li><a href="#Url">Url</a></li>
+        <li><a href="#Debug">Debug</a></li>
     </ul>
 
     <div id="test-cases">
