--- a/common/test/assets/javascripts/runner.html
+++ b/common/test/assets/javascripts/runner.html
@@ -171,6 +171,7 @@
         <li><a href="#Pad">Pad</a></li>
         <li><a href="#Url">Url</a></li>
         <li><a href="#Debug">Debug</a></li>
+        <li><a href="#Accordion">Accordion</a></li>
     </ul>
 
     <div id="test-cases">
