--- a/common/test/assets/javascripts/runner.html
+++ b/common/test/assets/javascripts/runner.html
@@ -172,6 +172,7 @@
         <li><a href="#Url">Url</a></li>
         <li><a href="#Debug">Debug</a></li>
         <li><a href="#Accordion">Accordion</a></li>
+        <li><a href="#LazyLoad">LazyLoad</a></li>
     </ul>
 
     <div id="test-cases">
