--- a/common/test/assets/javascripts/runner.html
+++ b/common/test/assets/javascripts/runner.html
@@ -174,6 +174,7 @@
         <li><a href="#Accordion">Accordion</a></li>
         <li><a href="#LazyLoad">Lazy Load</a></li>
         <li><a href="#TogglePanel">Toggle Panel</a></li>
+        <li><a href="#PageConfig">Page Config</a></li>
     </ul>
 
     <div id="test-cases">
