--- a/common/test/assets/javascripts/runner.html
+++ b/common/test/assets/javascripts/runner.html
@@ -176,6 +176,7 @@
         <li><a href="#LazyLoad">Lazy Load</a></li>
         <li><a href="#TogglePanel">Toggle Panel</a></li>
         <li><a href="#PageConfig">Page Config</a></li>
+        <li><a href="#CommentCount">Comment counts</a></li>
     </ul>
 
     <div id="test-cases">
