--- a/common/test/assets/javascripts/runner.html
+++ b/common/test/assets/javascripts/runner.html
@@ -334,6 +334,11 @@
             <p href="#hello" id="click-me-slow" data-link-name="paragraph">Paragraph 'Link'</p>
             <a href="/foo" id="click-me-internal" data-link-name="internal link">Same-host link</a>
             <a href="http://google.com/foo" id="click-me-external" data-link-name="external link">Other-host link</a>
+            <span data-link-context="the outer context">
+              <span data-link-context="the inner context">
+                <button href="/foo" id="click-me-link-context" data-link-name="the contextual link">The link</button>
+              </span>
+            </span>
         </p>
     </div>
 
