--- a/common/test/assets/javascripts/runner.html
+++ b/common/test/assets/javascripts/runner.html
@@ -120,7 +120,7 @@
 
     <ul id="tests">
         <li><a href="#Url">Url</a></li>
-        <li><a href="#AbTest">AB Test</a></li>
+        <li><a href="#Ab">AB</a></li>
         <li>
             Analytics
             <ul>
