--- a/common/test/assets/javascripts/runner.html
+++ b/common/test/assets/javascripts/runner.html
@@ -145,6 +145,7 @@
         <li><a href="#Cookies">Cookies</a></li>
         <li><a href="#Expandable">Expandable</a></li>
         <li><a href="#Images">Image</a></li>
+        <li><a href="#Interactive">Interactive</a></li>
         <li>
             Navigation
             <ul>
