--- a/common/test/assets/javascripts/runner.html
+++ b/common/test/assets/javascripts/runner.html
@@ -138,6 +138,7 @@
         </li>
         <li><a href="#Ajax">Ajax</a></li>
         <li><a href="#Aware">Aware</a></li>
+        <li><a href="#Canary">Canary</a></li>
         <li><a href="#Common">Common</a></li>
         <li><a href="#Detect">Detect</a></li>
         <li><a href="#Errors">Errors</a></li>
