--- a/common/test/assets/javascripts/runner.html
+++ b/common/test/assets/javascripts/runner.html
@@ -154,6 +154,7 @@
                 <li><a href="#TopStories">Top Stories</a></li>
                 <li><a href="#Australia">Australia</a></li>
                 <li><a href="#PlatformSwitch">Platform switching</a></li>
+                <li><a href="#AccountControl">User / Account</a></li>
             </ul>
         </li>
         <li><a href="#Popular">Popular</a></li>
