--- a/common/test/assets/javascripts/runner.html
+++ b/common/test/assets/javascripts/runner.html
@@ -185,6 +185,7 @@
         <li><a href="#PageConfig">Page Config</a></li>
         <li><a href="#CommentCount">Comment counts</a></li>
         <li><a href="#Overlay">Overlay</a></li>
+        <li><a href="#Id">Id</a></li>
     </ul>
 
     <div id="test-cases">
