Replace data-adtest with at for simplicity

--- a/facia/public/facebook_ia_remote.html
+++ b/facia/public/facebook_ia_remote.html
@@ -127,7 +127,7 @@
         }
 
         function buildAdtestTargeting() {
-            var adtest = slot.getAttribute('data-adtest');
+            var adtest = slot.getAttribute('at');
             return adtest ? ".setTargeting('at', '" + adtest + "')" : "";
         }
 
