--- a/facia/public/facebook_ia_remote.html
+++ b/facia/public/facebook_ia_remote.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="robots" content="noindex">
+    <script async class="kxct" data-id="J_RxuxWJ" data-timing="async" data-version="1.9" src="https://cdn.krxd.net/controltag?confid=J_RxuxWJ"></script>
+    <script async src="https://www.googletagservices.com/tag/js/gpt.js"></script>
 </head>
 <body style="margin:0">
     <script>
@@ -46,25 +48,6 @@
                 'referrer' : 'facebook-ia',
                 'section' : settings.section
             };
-        }
-
-        function loadKrux() {
-            var krux = document.createElement('script');
-            krux.setAttribute("class", "kxct");
-            krux.setAttribute("data-id", "J_RxuxWJ");
-            krux.setAttribute("data-timing", "async");
-            krux.setAttribute("data-version", "1.9");
-            krux.setAttribute("type", "text/javascript");
-
-            krux.innerHTML = "window.Krux||((Krux=function(){Krux.q.push(arguments)}).q=[]); " +
-                "(function(){ " +
-                "var k=document.createElement('script');k.type='text/javascript';k.async=true; " +
-                "var m,src=(m=location.href.match(/\bkxsrc=([^&]+)/))&&decodeURIComponent(m[1]); " +
-                "k.src = /^https?:\\/\\/([a-z0-9_\\-\\.]+\\.)?krxd\\.net(:\\d{1,5})?\\//i.test(src) ? src : src === 'disable' ? '' : " +
-                "(location.protocol==='https:'?'https:':'http:')+'//cdn.krxd.net/controltag?confid=J_RxuxWJ' ; " +
-                "var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(k,s); }());";
-
-            document.body.appendChild(krux);
         }
 
         function buildSegments() {
@@ -121,7 +104,7 @@
         function insertAdConfig() {
             var isFirstAd = true;
             if (isFirstAd) {
-                var pageLevelCodePart1 = "var googletag = googletag || {}; googletag.cmd = googletag.cmd || []; (function() { var gads = document.createElement(\"script\"); gads.async = true; gads.type = \"text/javascript\"; var useSSL = \"https:\" == document.location.protocol; gads.src = (useSSL ? \"https:\" : \"http:\") + \"//www.googletagservices.com/tag/js/gpt.js\"; var node = document.getElementsByTagName(\"script\")[0]; node.parentNode.insertBefore(gads, node); })();";
+                var pageLevelCodePart1 = "var googletag = googletag || { cmd: [] };";
                 insertScript(pageLevelCodePart1);
                 var pageLevelCodePart2 = "googletag.cmd.push(function() { googletag.pubads().enableAsyncRendering(); googletag.pubads().collapseEmptyDivs(); googletag.enableServices(); });";
                 insertScript(pageLevelCodePart2);
@@ -148,7 +131,6 @@
 
         function init() {
             exposeMetaDataForKrux();
-            loadKrux();
 
             insertAdConfig();
             insertAd();
